--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,25 +33,38 @@
   margin: 5px 10px 5px 20px;
   outline: none;
   border: 1px solid orange;
+  border-radius: 8px;
 }
 
 .select {
   width: 90%;
-  margin-left: 51px;
+  height: 35px;
+  margin: 10px 0 0 51px;
+  color: grey;
+}  
+
+.select option {
+  /* color: grey; */
 }
 
 .textarea {
   height: 150px;
 }
 
-#btn1 {
+.buttons a button{
   margin: 15px 0 20px 51px;
   padding: 12px 20px;
-  width: 20%;
+  width: 75%;
   background: orange;
   outline: none;
   font-size: 20px;
+  border-radius: 8px;
   box-shadow: 2px 2px 2px darkgrey;
+}
+
+#btn1:active, #btn2:active {
+  padding: 13px 20px 11px 20px;
+  box-shadow: inset 2px 2px 2px darkgrey;
 }
 
 i {
