--- a/client/src/AddField.css
+++ b/client/src/AddField.css
@@ -1,3 +1,14 @@
 #field-type {
     width: 40%;
 }
+
+#field-option {
+    height: 30px;
+    width: 100%;
+    font-size: 20px;
+    padding-left: 10px;
+    margin: 5px 10px 5px 20px;
+    outline: none;
+    border: 1px solid orange;
+    border-radius: 8px;
+}
