--- a/client/src/AddField.css
+++ b/client/src/AddField.css
@@ -12,3 +12,14 @@
     border: 1px solid orange;
     border-radius: 8px;
 }
+
+#btn3, #btn4 {
+    margin: 15px 0 20px 51px;
+    padding: 12px 20px;
+    /* width: 65%; */
+    background: orange;
+    outline: none;
+    font-size: 20px;
+    border-radius: 8px;
+    box-shadow: 2px 2px 2px darkgrey;
+}
